--- a/staffreg.css
+++ b/staffreg.css
@@ -4,6 +4,22 @@
     box-sizing: border-box;
     font-family: "poppins", sans-serif;
   }
+
+  .navbar {
+    background-color: purple;
+    color: #fff;
+    padding: 10px 0;
+    text-align: center;
+}
+.navbar a {
+    color: #fff;
+    text-decoration: none;
+    padding: 0 20px;
+}
+.navbar a:hover {
+    color: #ff0;
+}
+
   body{
     background-color: #38bfc3;
     background-position: center;
